--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="branding">
-            <img src="" alt="img" class="brand-image" />
+            <img src="assets/vaishali.jpg" alt="img" class="brand-image" />
             <span>vaishali.sahni</span>
         </div>
         <div>
@@ -46,7 +46,9 @@
                     engineering.
                 </p>
             </div>
-            <div class="image"></div>
+            <div class="image">
+                <img src="assets/vaishali.jpg" alt="">
+            </div>
         </section>
         <section class="section" id="skills">
             <h2 class="title">My <span>Skills</span></h2>
