--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="branding">
             <img src="assets/vaishali.jpg" alt="img" class="brand-image" />
-            <span>vaishali.sahni</span>
+            <span><a href="#home">vaishali.sahni</a></span>
         </div>
         <div>
             <nav>
@@ -328,9 +328,7 @@
                 </div>
             </div>
         </section>
-    </main>
-    <footer id="contact">
-        <section>
+        <section id="contact">
             <h2 class="footer-title">Contact</h2>
             <p class="footer-description">
                 Feel free to reach out to me for any questions or opportunities!
@@ -341,7 +339,7 @@
                 <a href="https://github.com/vaishalisahni" class="contact-btn">GitHub</a>
             </div>
         </section>
-    </footer>
+    </main>
 </body>
 
 </html>
