--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="card-content">
                         <h3 class="project-title ">
-                            Explorin Academy | Placement Training
+                            <a href="https://www.linkedin.com/posts/vaishali-sahni-28v_explorinacademy-datastructures-algorithms-activity-7237319974434828290-krDp?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD2tliUBaS01NqVCEQ_FuOUHd04qMHS2TTs" target="_blank">Explorin Academy | Placement Training</a>
                         </h3>
                         <p class="description">
                             Successfully completed a comprehensive summer program in Data
@@ -179,7 +179,7 @@
                     </div>
                     <div class="card-content">
                         <h3 class="project-title font-bold text-lg mt-8">
-                            Internshala Trainings | Web Development
+                            <a href="https://www.linkedin.com/posts/vaishali-sahni-28v_successfully-completed-the-web-development-activity-7090728896567906305-n6rL?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD2tliUBaS01NqVCEQ_FuOUHd04qMHS2TTs">Internshala Trainings | Web Development</a>
                         </h3>
                         <p class="description">
                             Successfully completed an extensive web development training program covering HTML, CSS,
@@ -195,7 +195,7 @@
                     </div>
                     <div class="card-content">
                         <h3 class="project-title font-bold text-lg mt-8">
-                            Verzeo | Robotics
+                            <a href="https://www.linkedin.com/posts/vaishali-sahni-28v_im-happy-to-share-that-ive-obtained-a-new-activity-7063051156549173248-rpDZ?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD2tliUBaS01NqVCEQ_FuOUHd04qMHS2TTs">Verzeo | Robotics</a>
                         </h3>
                         <p class="description">
                             Successfully completed an in-depth robotics training program, gaining expertise in
@@ -334,9 +334,10 @@
                 Feel free to reach out to me for any questions or opportunities!
             </p>
             <div class="contact-container">
-                <a href="https://www.linkedin.com/in/vaishali-sahni-28v/" class="contact-btn">LinkedIn</a>
-                <a href="mailto:vaishalisahni10@gmail.com" class="contact-btn">vaishalisahni10@gmail.com</a>
-                <a href="https://github.com/vaishalisahni" class="contact-btn">GitHub</a>
+                <a href="https://www.linkedin.com/in/vaishali-sahni-28v/" class="contact-btn" target="_blank">LinkedIn</a>
+                <a href="mailto:vaishalisahni10@gmail.com" class="contact-btn" target="_blank">vaishalisahni10@gmail.com</a>
+                <a href="https://github.com/vaishalisahni" class="contact-btn" target="_blank">GitHub</a>
+                <a href="tel:+919456790079" class="contact-btn" target="_blank">+919456790079</a>
             </div>
         </section>
     </main>
