--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <img src="./assets/amazon.png" alt="Project Image" class="project-img" />
                     <div class="project-details">
                         <h3>
-                            <a class="project-link" href="https://github.com/vaishalisahni/Amazon-Clone"
+                            <a class="project-link" href="https://amazon-clone-seven-lac.vercel.app/"
                                 target="_blank">Amazon Clone
                             </a>
                         </h3>
@@ -244,7 +244,7 @@
                     <img src="./assets/todo.png" alt="Project Image" class="project-img" />
                     <div class="project-details">
                         <h3>
-                            <a class="project-link" href="https://github.com/vaishalisahni/ToDo-List-App"
+                            <a class="project-link" href="https://vaishalisahni.github.io/ToDo-List-App/"
                                 target="_blank">To-Do App</a>
                         </h3>
                         <span>HTML, CSS, JavaScript, Local Storage</span>
@@ -268,7 +268,7 @@
                     <img src="./assets/Quiz.png" alt="Project Image" class="project-img" />
                     <div class="project-details">
                         <h3>
-                            <a class="project-link" href="https://github.com/vaishalisahni/QuizApp" target="_blank">Quiz
+                            <a class="project-link" href="https://vaishalisahni.github.io/QuizApp/" target="_blank">Quiz
                                 App</a>
                         </h3>
                         <span>HTML, CSS, JavaScript</span>
